@@ -19,6 +19,7 @@ Jython 2.5.2a1
     - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
+    - Fix pickling of collections.defaultdict objects
 
 Jython 2.5.1rc3
   Bugs Fixed
